# ExGraf

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Dockerfile.cpp  Dockerfile.dotnet  compile_commands.json  conanfile.py  docker-compose.yml  mnist.dot  mnist_other.dot
ExGraf/: CMakeLists.txt  Dockerfile.cpp
ExGraf/include/: exgraf.hpp
ExGraf/include/exgraf/: expression_graph.hpp  filesystem.hpp  forward.hpp  logger.hpp  model_configuration.hpp  node.hpp  node_visitor.hpp  sequential.hpp  shape.hpp
ExGraf/include/exgraf/bus/models/: metrics_message.hpp
ExGraf/include/exgraf/exporter/: graphviz_exporter.hpp
ExGraf/include/exgraf/http/: client.hpp  response.hpp
ExGraf/include/exgraf/loaders/: mnist.hpp
ExGraf/include/exgraf/messaging/: bus_metrics_logger.hpp  metrics_logger_base.hpp  serialisable.hpp
ExGraf/include/exgraf/optimizers/: sgd_optimizer.hpp
ExGraf/src/: explicit_instantiation.cpp
ExGraf/src/bus/models/: metrics_message.cpp  model_configuration.cpp
ExGraf/src/messaging/: rabbit_mq_transport.cpp  zero_mq_transport.cpp
MetricsSubscriber/: Dockerfile.dotnet  IMessageParser.cs  IMessageTransformer.cs  IMessageValidator.cs  ISubscriberSocket.cs  MetricsSubscriber.cs  MetricsSubscriber.csproj  MetricsSubscriber.sln  MetricsUpdatedEvent.cs  MetricsUpdatedEventHandler.cs  Program.cs  appsettings.Production.json  appsettings.json
MetricsSubscriber/Configuration/: MetricsSubscriberConfiguration.cs
MetricsSubscriber/Consumers/: MetricsMessageConsumer.cs  ModelConfigurationConsumer.cs
MetricsSubscriber/Entity/: Metrics.cs
MetricsSubscriber/Implementations/: MetricsMessageParser.cs  NetMqSubscriberSocket.cs
MetricsSubscriber/Models/Bus/: MetricsMessage.cs  ModelConfigurationMessage.cs
MetricsSubscriber/Models/Vertical/: MetricsNotification.cs  MetricsUpdatedEvent.cs  ModelConfigurationNotification.cs
MetricsSubscriber/Services/: MetricsMessageTransformer.cs  MetricsMessageValidator.cs
conan/: alpine  alpine-clang
cuda/: CMakeLists.txt  main.cpp
cuda/kernels/: cuda_kernel.cu
demo/: CMakeLists.txt  main.cpp
include/: exgraf.hpp
include/exgraf/: allowed_types.hpp  binary_operation.hpp  exgraf_pch.hpp  expression_graph.hpp  forward.hpp  logger.hpp  model.hpp  model_configuration.hpp  node.hpp  node_visitor.hpp  operation.hpp  operations.hpp  optimizer.hpp  placeholder.hpp  sequential.hpp  shape.hpp  tensor.hpp  unary_operation.hpp  variable.hpp
include/exgraf/bus/models/: metrics_message.hpp  model_configuration.hpp
include/exgraf/exporter/: graphviz_exporter.hpp
include/exgraf/http/: client.hpp  response.hpp
include/exgraf/loaders/: mnist.hpp  mnist_loader.hpp
include/exgraf/messaging/: bus_transport.hpp  file_metrics_logger.hpp  metrics_logger_base.hpp  rabbit_mq_transport.hpp  zero_mq_transport.hpp
include/exgraf/optimizers/: adam_optimizer.hpp  optimizer.hpp  sgd_optimizer.hpp
include/exgraf/visitors/: evaluation_order.hpp  graphviz.hpp
include/exgraf/visualisation/: bus_metrics_logger.hpp  file_metrics_logger.hpp  metrics_logger_base.hpp
src/: binary_operation.cpp  explicit_instantiation.cpp  expression_graph.cpp  filesystem.cpp  logger.cpp  main.cpp  model.cpp  tensor.cpp  unary_operation.cpp
src/bus/models/: metrics_message.cpp  model_configuration.cpp
src/http/: client.cpp
src/loaders/: mnist.cpp
src/messaging/: rabbit_mq_transport.cpp  zero_mq_transport.cpp
tests/: CMakeLists.txt  basic_graph_tests.cpp  fs_tests.cpp.in  operations_tests.cpp  tensor_one_hot_tests.cpp
tests/data/test/: sample.txt
